language/move-lang/tests/move_check/naming/standalone_mname.move
module M {
    foo() {
        let m = M;
    }
}
